--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>ドイツ語単語</h1>
-    <h2テキスト（選択）</h2>
+    <h2>テキスト（選択）</h2>
     <h6 id="toTop">トップに戻る</h6>
     <table id="main">
         <tr>
