--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ドイツ語単語 テキスト</title>
+    <title>ドイツ語単語 テキスト（選択）</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
